fix bug 沒寫getDisk